# -----------------------------------------------------------------------------
# Build System
# -----------------------------------------------------------------------------

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
packages = [
    "src/textual_slider",
    "examples/rgb.py",
    "examples/steps.py",
    "examples/spinal_tap.py",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/textual_slider",
    "examples/rgb.py",
    "examples/steps.py",
    "examples/spinal_tap.py",
]

# -----------------------------------------------------------------------------
# Entry Points
# -----------------------------------------------------------------------------

[project.scripts]
rgb-slider = 'rgb:main'
steps-slider = 'steps:main'
spinal-tap-slider = 'spinal_tap:main'

[project.entry-points."pipx.run"]
rgb-slider = 'rgb:main'
steps-slider = 'steps:main'
spinal-tap-slider = 'spinal_tap:main'

[project.entry-points."uvx.run"]
rgb-slider = 'rgb:main'
steps-slider = 'steps:main'
spinal-tap-slider = 'spinal_tap:main'

# -----------------------------------------------------------------------------
# Project Metadata
# -----------------------------------------------------------------------------

[project]
name = "textual-slider"
readme = "README.md"
version = "0.2.1"
license = "GPL-3.0"
authors = [{ name = "TomJGooding" }]
maintainers = [{ name = "TomJGooding" }]
description = "A Textual widget for a simple slider"
license-files = ["LICENSE"]
requires-python = ">=3.8"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
dependencies = ["textual"]

[project.urls]
Home = "https://github.com/TomJGooding/textual-slider"
Issues = "https://github.com/TomJGooding/textual-slider/issues"

[dependency-groups]
dev = [
    "mypy",
    "black",
    "isort",
    "twine",
    "build",
    "hatch",
    "flake8",
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "textual-dev",
]

# -----------------------------------------------------------------------------
# Tool Configurations
# -----------------------------------------------------------------------------

[tool.uv]
package = true
